# duckdb-rrd

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
docs/: DESIGN.md  community-extensions-description.yml
src/: arrow_bridge.rs  lib.rs  read.rs  store.rs  write.rs
test/data/: simple.rrd  truncated.rrd
test/sql/: copy.rrd  loss.rrd  read_rrd.test  static.rrd  ts.rrd  write_rrd.test
